--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.7.0"
+  },
+  "devDependencies": {
+    "jest-cli": "^29.7.0"
   }
 }
